--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "next13",
   "version": "0.1.0",
@@ -15,6 +14,8 @@
     "@mui/material": "^5.13.0",
     "@mui/x-data-grid": "^6.4.0",
     "@mui/x-data-grid-generator": "^6.4.0",
+    "@nextui-org/dropdown": "^2.0.11",
+    "@nextui-org/react": "^2.0.18",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "mongodb": "^5.5.0",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-currency-input-field": "^3.6.10",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "tailwindcss": "3.3.2"
   }
 }
