--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/react": "^2.0.18",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "moment": "^2.29.4",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "next": "13.4.2",
